# houdiniUtils

./: .gitignore  README.md  houdiniUtils.json  houdiniUtils.sh  pyproject.toml  setup.py
dataPlotKit/: numpy_basics.ipynb  pandas_basics.ipynb
fSpy/: fspy.py  shelf_hou.py
hda/: google_upload.py
houdiniNet/: houTree.py  trie.py
houdiniutils/: README.md  __init__.py  post_install.py  setup.py
houdiniutils/assetGallery/: update_asset_path.py
houdiniutils/dataPlotKit/: Intro_to_matplotlib.ipynb  Seaborn_intro.ipynb  matplotlib_advanced.ipynb
houdiniutils/fSpy/: fspy.py
houdiniutils/hda/: google_uploadv2.py
houdiniutils/importhou/: importhou.py
houdiniutils/projTools/: folders.py
houdiniutils/sceneTools/: 456.py  __init__.py  env_utils.py  lopFuncs.py
houdiniutils/textureTools/: __init__.py  houdiniUtils.shelf  main.py  renTexFiles.py  renameTexture.py  tex_id_manager.py  textureID.json
houdiniutils/usdTools/: add_lpe_tag.py  code_restruc_scene.py  copy_property.py  rename_prims.py  rename_primsv2.py  rop_hipbackup.py  tex_disk.py  update_properties.py
projTools/: __init__.py  main.py  rebelway.py
refCode/: binaryTree.py  linkedlist.py  quickstart.py  upload.py
scripts/fSpy/: __init__.py  fspy_gui.py
scripts/hda/: groupCurves.py
scripts/houdiniNet/: LICENSE  linkedList.py
scripts/refCode/: trie_alt.py
src/houdiniutils/: post_install.py
src/houdiniutils/textureTools/: __init__.py  main.py  renameTexture.py  textureID.json
tests/: check_image_path.py  kitbashmatpath.py  kitbashpath.py
