[tool.poetry]
name = "houdiniutils"
version = "0.1.0"
description = "Houdini Utilities and toolset written in Python"
authors = ["Suhail"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
numpy = "^1.26.4"
notebook = "^7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
