[tool.poetry]
name = "houdiniutils"
version = "0.1.0"
description = "Houdini Utilities and toolset written in Python"
authors = ["Suhail"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
numpy = "^1.26.4"
notebook = "^7.1.2"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
xattr = "^1.1.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

